# NanoMind

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  train.yml
checkpoints/: step_100.ckpt  step_150.ckpt  step_200.ckpt  step_50.ckpt
crates/nanomind/: Cargo.toml
crates/nanomind-cli/: Cargo.toml
crates/nanomind-cli/src/: main.rs
crates/nanomind-core/: Cargo.toml
crates/nanomind-core/src/: attention.rs  ggml.rs  gguf_writer.rs  lib.rs  ops.rs  quantization.rs  rope.rs
crates/nanomind-gguf/: Cargo.toml
crates/nanomind-gguf/src/: lib.rs  metadata.rs  reader.rs  tensor.rs
crates/nanomind-model/: Cargo.toml
crates/nanomind-model/src/: config.rs  file_format.rs  kv_cache.rs  layers.rs  lib.rs  model.rs
crates/nanomind-runtime/: Cargo.toml
crates/nanomind-runtime/src/: lib.rs
crates/nanomind-sampling/: Cargo.toml
crates/nanomind-sampling/src/: lib.rs
crates/nanomind-server/: Cargo.toml
crates/nanomind-server/src/: lib.rs
crates/nanomind-tokenizer/: Cargo.toml
crates/nanomind-tokenizer/src/: bpe.rs  lib.rs
crates/nanomind-trainer/: Cargo.toml
crates/nanomind-trainer/src/: autodiff.rs  config.rs  data_loader.rs  lib.rs  main.rs  model.rs  optimizer.rs  train.rs
crates/nanomind/src/: main.rs
data/: corpus.txt  instruct.txt  make_instruct.sh  prepare.sh
data/raw/: security_concepts.txt
scripts/: download_hacker_model.sh  download_model.sh  train_termux.sh
tools/: convert_to_gguf.py  convert_weights.py  make_gguf.py
