[workspace]
members = [
    "crates/nanomind-core",
    "crates/nanomind-gguf",
    "crates/nanomind-model",
    "crates/nanomind-tokenizer",
    "crates/nanomind-sampling",
    "crates/nanomind-server",
    "crates/nanomind",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
