[package]
name = "nanomind-runtime"
version = "0.1.0"
edition = "2021"
description = "Inference loop, KV cache, sampling for NanoMind"

[dependencies]
nanomind-core = { path = "../nanomind-core" }
nanomind-model = { path = "../nanomind-model" }
nanomind-tokenizer = { path = "../nanomind-tokenizer" }
rand = "0.8"
rand_distr = "0.4"
