[package]
name = "nanomind-server"
version = "0.1.0"
edition = "2021"
description = "Ollama-compatible HTTP API server"

[dependencies]
nanomind-core = { path = "../nanomind-core" }
nanomind-model = { path = "../nanomind-model" }
nanomind-tokenizer = { path = "../nanomind-tokenizer" }
nanomind-sampling = { path = "../nanomind-sampling" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
