[package]
name = "nanomind"
version = "0.1.0"
edition = "2021"
description = "Ultra-compressed Rust LLM inference engine — Ollama-compatible"

[[bin]]
name = "nanomind"
path = "src/main.rs"

[dependencies]
nanomind-core = { path = "../nanomind-core" }
nanomind-gguf = { path = "../nanomind-gguf" }
nanomind-model = { path = "../nanomind-model" }
nanomind-tokenizer = { path = "../nanomind-tokenizer" }
nanomind-sampling = { path = "../nanomind-sampling" }
nanomind-server = { path = "../nanomind-server" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
